Changelog for ActiveDirectoryX.

ActiveDirectoryX 2.0.0
======================
- Forked and refactored to ActiveDirectoryX
- [#5] Cannot assign by reference to overloaded object

ActiveDirectory 1.0.1
=====================
- Add more settings for LDAP connectivity
- [#3] Fix issue with LDAP referrals and incorrect setting

ActiveDirectory 1.0.0
=====================
- Add sqlsrv support
- Add activedirectory.enabled setting, which defaults to 0. Set to 1 to to turn on modActiveDirectory.
- Fix issue with extension_packages setting, stop patching login.php file since now fixed in Revo
- Fix issue with logins and empty passwords