@@ -38,6 +38,8 @@ $_lang['setting_activedirectoryx.autoadd_usergroups'] = 'Auto-Add User Groups';
 $_lang['setting_activedirectoryx.autoadd_usergroups_desc'] = 'A comma-separated list of MODx UserGroup names which the User will always be added to.';
 $_lang['setting_activedirectoryx.enabled'] = 'ActiveDirectory SSO Enabled';
 $_lang['setting_activedirectoryx.enabled_desc'] = 'When set to Yes, enables the ActiveDirectoryX SSO integration. If set to No, the plugin and login system will be bypassed.';
+$_lang['setting_activedirectoryx.only_ad_logins'] = 'Only ActiveDirectory logins';
+$_lang['setting_activedirectoryx.only_ad_logins_desc'] = 'Allow login only from ActiveDirectory. Warning: If set to Yes, standard MODX users can not log on.';
 $_lang['setting_activedirectoryx.base_dn'] = 'Base DN';
 $_lang['setting_activedirectoryx.base_dn_desc'] = 'The base dn for your domain. This can usually be left blank, as MODx will automatically calculate it for you.';
 $_lang['setting_activedirectoryx.domain_controllers'] = 'Domain Controllers';
